[package]
name = "sigma-telemetry"
version = "0.1.0"
edition = "2021"
description = "OpenTelemetry-based observability for the Ryzanstein LLM ecosystem"
license = "AGPL-3.0"
repository = "https://github.com/iamthegreatdestroyer/Ryzanstein"

[dependencies]
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"], optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[features]
default = []
jaeger = ["opentelemetry-otlp"]
prometheus = []

